# brain-api-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
src/api/: app.py  auth.py  config.py  limiter.py  proxy.py
tests/: conftest.py  test_integration.py  test_jwt_validation.py  test_route_resolution.py
