[project]
name = "api-gateway"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pyjwt>=2.9.0",
    "pydantic-settings>=2.7.0",
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
